--- a/taetz.ipynb
+++ b/taetz.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import open3d as o3d\n",
-    "from open3d.visualization import draw"
+    "from open3d.visualization import draw\n",
+    "import numpy as np"
    ]
   },
   {
@@ -20,6 +21,15 @@
     "cube_blue.compute_vertex_normals()\n",
     "cube_blue.paint_uniform_color((0.0, 0.0, 1.0))\n",
     "draw({\"name\":\"cube_blue\",\"geometry\":cube_blue} ,show_ui=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_joints=np.tile(np.zeros(3,),(21,1)) "
    ]
   }
  ],
