general changes and consolidation

--- a/taetz.ipynb
+++ b/taetz.ipynb
@@ -23,43 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Open3D INFO] Window window_0 created.\n",
+      "[Open3D INFO] ICE servers: {\"stun:stun.l.google.com:19302\", \"turn:user:password@34.69.27.100:3478\", \"turn:user:password@34.69.27.100:3478?transport=tcp\"}\n",
+      "[Open3D INFO] Set WEBRTC_STUN_SERVER environment variable add a customized WebRTC STUN server.\n",
+      "[Open3D INFO] WebRTC Jupyter handshake mode enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "cube_blue = o3d.geometry.TriangleMesh.create_box(1, 2, 4)\n",
     "cube_blue.compute_vertex_normals()\n",
     "cube_blue.paint_uniform_color((0.0, 0.0, 1.0))\n",
     "draw({\"name\":\"cube_blue\",\"geometry\":cube_blue} ,show_ui=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_joints=np.tile(np.zeros(3,),(21,1)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 1.])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.eye(3)[2]"
    ]
   }
  ],
